--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <div class="row">
                     <div class="col">
                         <p></p>
-                        <p>I'm 24 years old, Tunisian, computer science student.</p>
+                        <p>I'm 24 years old, Tunisian, Computer Science student.</p>
                         <p>I've accomplished Internships in&nbsp;<a href="http://www.sacemindustries.com" style="color: rgb(255,255,255);font-weight: bold;" target="_blank" rel="noopener noreferrer">Sacem</a>, <a href="http://www.mediatel.tn" style="color: rgb(255,255,255);font-weight: bold;"
                                 target="_blank" rel="noopener noreferrer">Mediatel</a>,&nbsp;<a href="https://www.tunisietelecom.tn" style="color: rgb(255,255,255);font-weight: bold;" target="_blank" rel="noopener noreferrer">Tunisie Telecom</a>&nbsp; and
                             more!</p>
