--- a/index.html
+++ b/index.html
@@ -19,9 +19,7 @@
 <body style="background: rgb(0,0,0);color: rgb(255,255,255);">
     <section class="d-flex flex-column justify-content-between" id="hero" style="width: 100%;height: 100vh;background: url(&quot;assets/img/pexels-azim-islam-1210276.jpg&quot;) center / cover no-repeat;">
         <div id="hero-top"></div>
-        <div style="height: 350px;">
-            <h1 id="animatedTextHeading" style="font-size: 113;margin-top: 10px;text-align: center;">Welcome<br>Salut</h1>
-        </div>
+            <h1 id="animatedTextHeading" style="font-size: 100px;margin-top: 10px;text-align: center;">Welcome<br>Salut</h1>
         <div id="hero-butotm">
             <div class="container" style="width: 700px;text-align: center;">
                 <div class="row">
