--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
 							<h3><span>Full-Stack Developer | Blockchain</span></h3>
 							<p>
 								<ul class="fh5co-social-icons">
+									<li><a href="mailto:contact@faresgdoura.com"><i class="icon-email"></i></a></li>
 									<li><a href="https://twitter.com/GdouraFares" target="_blank"><i class="icon-twitter2"></i></a></li>
 									<li><a href="https://www.linkedin.com/in/fares-gdoura" target="_blank"><i class="icon-linkedin2"></i></a></li>
 									<li><a href="https://github.com/FaresG" target="_blank"><i class="icon-github2"></i></a></li>
