--- a/index.html
+++ b/index.html
@@ -95,6 +95,16 @@
 
 	<!-- Main -->
 	<script src="js/main.js"></script>
+
+	<!-- Google tag (gtag.js) -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-X8PDPDCP2H"></script>
+	<script>
+		window.dataLayer = window.dataLayer || [];
+		function gtag(){dataLayer.push(arguments);}
+		gtag('js', new Date());
+
+		gtag('config', 'G-X8PDPDCP2H');
+	</script>
 	</body>
 </html>
 
