--- a/index.html
+++ b/index.html
@@ -33,7 +33,10 @@
 	<!--[if lt IE 9]>
 	<script src="js/respond.min.js"></script>
 	<![endif]-->
-
+		
+	<!-- Pixel Code for https://buxnotes.xyz/ -->
+	<script defer src="https://buxnotes.xyz/pixel/RswSwheSVrURBz9C"></script>
+	<!-- END Pixel Code -->
 	</head>
 	<body>
 		
