--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Fares Gdoura | Portfolio</title>
+	<title>Fares Gdoura</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
 	<link rel="icon" href="favicon.ico" sizes="any"><!-- 32×32 -->
@@ -33,6 +33,10 @@
 	<!--[if lt IE 9]>
 	<script src="js/respond.min.js"></script>
 	<![endif]-->
+
+	<!-- Pixel Code for https://app.deepbux.io/ -->
+	<script defer src="https://app.deepbux.io/pixel/zaT8yEWLO7yzqsYQ"></script>
+	<!-- END Pixel Code -->
 
 	</head>
 	<body>
