--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
 	<script src="js/respond.min.js"></script>
 	<![endif]-->
 
-	<!-- Pixel Code for https://app.deepbux.io/ -->
-	<script defer src="https://app.deepbux.io/pixel/zaT8yEWLO7yzqsYQ"></script>
-	<!-- END Pixel Code -->
+		<!-- Pixel Code for https://pixel.deepbux.io/ -->
+		<script defer src="https://pixel.deepbux.io/pixel/zaT8yEWLO7yzqsYQ"></script>
+		<!-- END Pixel Code -->
 
 	</head>
 	<body>
