--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@
 		<!-- Pixel Code for https://pixel.deepbux.io/ -->
 		<script defer src="https://pixel.deepbux.io/pixel/zaT8yEWLO7yzqsYQ"></script>
 		<!-- END Pixel Code -->
+		<!-- Pixel Code for https://pixel.deepbux.io/ -->
+		<script defer src="https://pixel.deepbux.io/pixel/gxGrq9Q12vaPjHg0"></script>
+		<!-- END Pixel Code -->
 
 	</head>
 	<body>
