--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
 	<script src="js/respond.min.js"></script>
 	<![endif]-->
 
-		<!-- Pixel Code for https://app.deepbux.io/ -->
-		<script defer src="https://app.deepbux.io/pixel/PtHbBoVUDbRPZBDX"></script>
+		<!-- Pixel Code for https://dv-staging.deepbux.io/ -->
+		<script defer src="https://dv-staging.deepbux.io/pixel/OLlvi6K62TrvBusJ"></script>
 		<!-- END Pixel Code -->
 
 	</head>
