--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
 		<!-- Pixel Code for https://dv-staging.deepbux.io/ -->
 		<script defer src="https://dv-staging.deepbux.io/pixel/OLlvi6K62TrvBusJ"></script>
-		<!-- END Pixel Code -->
+		<!-- END Pixel Code. -->
 
 	</head>
 	<body>
