--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
 	<![endif]-->
 
 		<!-- Pixel Code for https://dv-staging.deepbux.io/ -->
-		<script defer src="https://dv-staging.deepbux.io/pixel/OLlvi6K62TrvBusJ"></script>
-		<!-- END Pixel Code. -->
+		<script defer src="http://deepbux.local/pixel/qIK6N2qFxRK8Al0R"></script>		<!-- END Pixel Code. -->
+		<script defer src="http://deepbux.local/pixel/3P0IcrOhJq346vM5"></script>
 
 	</head>
 	<body>
