--- a/index.html
+++ b/index.html
@@ -34,10 +34,17 @@
 	<script src="js/respond.min.js"></script>
 	<![endif]-->
 
-		<!-- Pixel Code for https://dv-staging.deepbux.io/ -->
-		<script defer src="http://deepbux.local/pixel/qIK6N2qFxRK8Al0R"></script>		<!-- END Pixel Code. -->
-		<script defer src="http://deepbux.local/pixel/3P0IcrOhJq346vM5"></script>
-
+		<!-- Hotjar Tracking Code for my site -->
+		<script>
+			(function(h,o,t,j,a,r){
+				h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
+				h._hjSettings={hjid:3751429,hjsv:6};
+				a=o.getElementsByTagName('head')[0];
+				r=o.createElement('script');r.async=1;
+				r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
+				a.appendChild(r);
+			})(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
+		</script>
 	</head>
 	<body>
 		
